--- a/src/scss/utilities/_typography.scss
+++ b/src/scss/utilities/_typography.scss
@@ -1,41 +1,47 @@
+@use "_root.scss" as *;
+@use "_colors.scss" as *;
+
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:ital,wght@0,100;0,200;0,400;0,700;1,100;1,200;1,400;1,700&display=swap');
 
 $primaryFont: 'Raleway', sans-serif;
 $secondaryFont: 'Playfair Display', serif;
 
-$primaryColor: #4c4c4c;
 
 h1 {
   font-family: $primaryFont;
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   font-weight: 700;
   color: $primaryColor;
+  text-align: center;
+  margin: 1em 0 1.5em;
 }
 
 h2 {
   font-family: $primaryFont;
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 700;
   color: $primaryColor;
+  margin-bottom: 1em;
 }
 
 h3 {
   font-family: $primaryFont;
-  font-size: 2.5rem;
-  font-weight: 700;
+  font-size: 2rem;
+  font-weight: 400;
   color: $primaryColor;
 }
 
-p {
+p, label, input, textarea, button {
   font-family: $primaryFont;
-  font-size: 2.5rem;
-  font-weight: 700;
+  font-size: 1.8rem;
+  font-weight: 400;
   color: $primaryColor;
+  line-height: 1.7em;
 }
 
 a {
   font-family: $primaryFont;
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 700;
   color: $primaryColor;
   &:visited {
