--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:ital,wght@0,100;0,200;0,400;0,700;1,100;1,200;1,400;1,700&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
+a,
+.header-nav__link, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
@@ -49,7 +50,7 @@ table {
   border-spacing: 0;
 }
 
-a {
+a, .header-nav__link {
   text-decoration: none;
 }
 
@@ -81,7 +82,13 @@ h3 {
   color: #4c4c4c;
 }
 
-p, label, input, textarea, button {
+p,
+a,
+.header-nav__link,
+label,
+input,
+textarea,
+button {
   font-family: "Raleway", sans-serif;
   font-size: 1.8rem;
   font-weight: 400;
@@ -89,35 +96,47 @@ p, label, input, textarea, button {
   line-height: 1.7em;
 }
 
-a {
-  font-family: "Raleway", sans-serif;
-  font-size: 2rem;
-  font-weight: 700;
-  color: #4c4c4c;
+a, .header-nav__link {
+  /* transition: 200ms; */
+  padding: 0.5em;
 }
-a:visited {
+a:hover, .header-nav__link:hover {
+  color: orange;
+}
+a:focus, .header-nav__link:focus {
+  color: red;
+}
+a:active, .header-nav__link:active {
+  color: greenyellow;
+}
+a:visited, .header-nav__link:visited {
   color: #4c4c4c;
 }
 
+.test, footer, header {
+  background-color: #ccc;
+}
+
 header {
-  background-color: #bbb;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 2vh 5vw;
 }
+header a, header .header-nav__link {
+  margin: 0 1vw;
+  font-weight: 400;
+}
 
 .header__title {
   margin: 0;
 }
-
 footer {
   /* position: sticky;
   bottom: 0;
   */
   /* position: fixed;
   inset: auto 0 0 0;  */
-  background-color: #bbb;
   display: flex;
   justify-content: space-between;
   align-items: center;
