--- a/src/scss/components/_calendar.scss
+++ b/src/scss/components/_calendar.scss
@@ -1,20 +1,35 @@
 .calendar {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  margin-bottom: 75vh;
-  gap: 5px;
-  width: fit-content;
-  margin: 5vh auto;
-  /* justify-items: center ; */
-  &__day {
-    height: 100px;
-    width: 100px;
-    background-color: tomato;
-    padding: 10px;
-    overflow: hidden;
+  display: none;
+  @media screen and (min-width: 500px) {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    margin-bottom: 75vh;
+    gap: 5px;
+    width: fit-content;
+    margin: 5vh auto;
+    /* justify-items: center ; */
+    &__day {
+      height: 50px;
+      aspect-ratio: 1/1;
+      background-color: tomato;
+      padding: 0;
+      padding: 5px;
+      overflow: hidden;
 
-    & p {
-      margin-left: 10px;
+      & p {
+        margin: 10px 5px;
+        line-height: 0;
+      }
+    }
+  }
+  @media screen and (min-width: 700px) {
+    &__day {
+      height: 75px;
+    }
+  }
+  @media screen and (min-width: 900px) {
+    &__day {
+      height: 100px;
     }
   }
 }
