logic working - no first rendering

--- a/src/scss/components/_calendar.scss
+++ b/src/scss/components/_calendar.scss
@@ -11,7 +11,7 @@
     &__day {
       height: 50px;
       aspect-ratio: 1/1;
-      background-color: tomato;
+      background-color: orange;
       padding: 0;
       padding: 5px;
       overflow: hidden;
