--- a/src/main.css
+++ b/src/main.css
@@ -166,7 +166,7 @@ button {
   .calendar__day {
     height: 50px;
     aspect-ratio: 1/1;
-    background-color: orange;
+    outline: 1px solid orange;
     padding: 0;
     padding: 5px;
     overflow: hidden;
