--- a/src/scss/utilities/_colors.scss
+++ b/src/scss/utilities/_colors.scss
@@ -1,3 +1,7 @@
-$test-color : #d5d5d5;
-$primaryColor: #4c4c4c;
-$primaryColorLight : #bbb;
+$test-color : white;
+$white : hsl(0, 0%, 90%);
+$grey : hsl(0, 0%, 50%);
+$primaryColor: #EBA400;
+$secondaryColor : #BA17EB;
+$tertiaryColor: #17EB98;
+$primaryColorLight : white;
