--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -1,5 +1,5 @@
 @forward '_header.scss';
 @forward '_footer.scss';
 @forward '_button.scss';
-@forward '_calendar.scss';
 @forward '_main.scss';
+// @forward '_calendar.scss';
