--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,8 +1,9 @@
 @use '../utilities/colors' as *;
 
 button {
-  background-color: $primaryColorLight;
+  background-color: $white;
   border: none;
   padding: 0.5em 1.5em;
+  margin-top: 2.5vh;
   border-radius: 5px;
 }
