--- a/src/scss/utilities/_typography.scss
+++ b/src/scss/utilities/_typography.scss
@@ -1,10 +1,10 @@
 @use '_root.scss' as *;
 @use '_colors.scss' as *;
 
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:ital,wght@0,100;0,200;0,400;0,700;1,100;1,200;1,400;1,700&display=swap');
+@import url('https://fonts.cdnfonts.com/css/special-elite');
 
-$primaryFont: 'Raleway', sans-serif;
-$secondaryFont: 'Playfair Display', serif;
+$primaryFont: 'Alegreya Sans', sans-serif;
+$logoFont: 'Special Elite', sans-serif;
 
 h1 {
   font-family: $primaryFont;
