--- a/src/scss/utilities/_colors.scss
+++ b/src/scss/utilities/_colors.scss
@@ -1,7 +1,8 @@
-$test-color : white;
-$white : hsl(0, 0%, 90%);
-$grey : hsl(0, 0%, 50%);
-$primaryColor: #EBA400;
-$secondaryColor : #BA17EB;
-$tertiaryColor: #17EB98;
-$primaryColorLight : white;
+$test-color: white;
+$white: hsl(0, 0%, 90%);
+$lightGrey: hsl(0, 0%, 95%);
+$grey: hsl(0, 0%, 50%);
+$primaryColor: #eba400;
+$secondaryColor: #ba17eb;
+$tertiaryColor: #17eb98;
+$primaryColorLight: hsl(0, 0%, 100%);
